# src/modules/sales/dto/update-sale.dto.ts
@@ -1,0 +1,7 @@
+import { IsOptional, IsNumber } from 'class-validator';
+
+export class UpdateSaleDto {
+  @IsNumber()
+  @IsOptional()
+  quantity?: number;
+}
