# src/modules/sales/sales.controller.ts
@@ -1,0 +1,26 @@
+import { Controller, Get, Post, Patch, Param, Body } from '@nestjs/common';
+import { SalesService } from './sales.service';
+import { CreateSaleDto } from './dto/create-sale.dto';
+import { UpdateSaleDto } from './dto/update-sale.dto';
+import { ApiTags } from '@nestjs/swagger';
+
+@ApiTags('sales')
+@Controller('sales')
+export class SalesController {
+  constructor(private readonly service: SalesService) {}
+
+  @Get()
+  findAll() {
+    return this.service.findAll();
+  }
+
+  @Post()
+  create(@Body() dto: CreateSaleDto) {
+    return this.service.create(dto);
+  }
+
+  @Patch(':id')
+  update(@Param('id') id: string, @Body() dto: UpdateSaleDto) {
+    return this.service.update(id, dto);
+  }
+}
